--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,9 +18,14 @@ header {
 	padding-bottom: 24px;
 }
 
-#title-komik,
-.reader-container {
+#title-komik {
 	text-align: center;
+}
+
+.reader-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .reader-container img {
@@ -73,7 +78,8 @@ select,
 	align-items: center;
 }
 
-.error-container {
+.error-container,
+.loading-container {
 	/* display: flex; */
 	display: none;
 	align-items: center;
