--- a/public/style.css
+++ b/public/style.css
@@ -6,10 +6,100 @@ body {
     overflow-x: hidden;
 }
 
-header {
+header,
+.form-container,
+.chapter-select-container,
+.controll-container {
     padding: .3em 16px;
+}
+
+header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+header h1 {
+    font-size: 32px;
+}
+
+header h1,
+header h3 {
+    margin: 0;
 }
 
 .subtitle {
     font-weight: normal;
+}
+
+.form-container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+
+.chapter-select-container {
+    margin-top: 16px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.controll-container {
+    margin-top: 16px;
+    margin-bottom: 16px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form-control {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.form-control input {
+    width: 250px;
+}
+
+select,
+button {
+    padding: 8px 16px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+}
+
+.baca-status {
+    padding: 16px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.error {
+    color: red;
+}
+
+.komik-title {
+    margin-bottom: 8px;
+}
+
+.komik-title h3 {
+    margin: 0;
+    text-align: center;
+    font-size: 26px;
+}
+
+.baca {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 64px;
+}
+
+.baca img {
+    width: 100%;
+    max-width: 920px;
 }
