--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -10,7 +10,7 @@ header,
 .form-container,
 .chapter-select-container,
 .controll-container {
-    padding: .3em 16px;
+    padding: 0.3em 16px;
 }
 
 header {
